# chm-utils

./: .gitignore  Dockerfile.test  justfile  pyproject.toml  readme.md  test-requirements.txt
chm_utils/: __init__.py  cli.py  logger.py  logging.py  sls.py
chm_utils/clients/: snowflake.py
chm_utils/ext/: auth.py  snowflake.py
tests/: test_auth.py  test_cli.py  test_clients.py  test_sls.py  test_snowflake.py
tests/fixtures/: serverless.yml  serverless_small.yml
