[project]
name = "chm_utils"
version = "0.2.2"
dependencies = [
  "boto3",
  "PyYAML"
]
requires-python = ">=3.8"
authors = [
  {name = "Adrian Oesch", email = "helloadrianoesch@chmedia.ch"},
]
description = "A custom python package with common utilities within CH Media Data"
readme = "readme.md"

[project.optional-dependencies]
snowflake = [
  "snowflake-connector-python[pandas]>=3.12.0",
]
redis = [
  "redis"
]
auth = [
  "dash>=2.7.0"
]

[project.scripts]
chm_utils = "chm_utils.cli:main"

[tool.setuptools]
packages = ["chm_utils", "chm_utils.clients", "chm_utils.ext"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"
]
log_cli = 1
log_cli_level="INFO"